# grappul

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml  Dioxus.toml  ITEM_ID_MAPPING.md  README.md  agni.html  app.js  explain.html  he-bo.html  index.html  item_id_mapping.json  style.css  template.html  test-tiles.html  test.json  test1.html
.github/workflows/: deploy.yml
assets/: app.css  themes.css
assets/gods/: nu_wa.png:Zone.Identifier  the_morrigan.png:Zone.Identifier
assets/items/: M_Shoes_oftheMagi.png:Zone.Identifier  P_WarriorTabi.png:Zone.Identifier  ancile.png:Zone.Identifier  arondight.png:Zone.Identifier  asclepius.png:Zone.Identifier  asi.png:Zone.Identifier  atalantas.png:Zone.Identifier  bancrofts.png:Zone.Identifier  berserkers.png:Zone.Identifier  blackthorn.png:Zone.Identifier  bloodforge.png:Zone.Identifier  bookofthedead.png:Zone.Identifier  bookofthoth.png:Zone.Identifier  clh.png:Zone.Identifier  (+118 more)
notes/: grappul-project-outline.md  grappul-rust-technical-brief.md  grappul-ui-states.md
scripts/: MIGRATION_SUMMARY.md  README.md  add_missing_item_effects.py  check_item_keys.py  convert_item_stats.py  debug_ability.py  debug_ability_extraction.py  debug_ability_pattern.py  fix_item_keys.py  item_scraper.py  migrate_items_to_btreemap.py  quick_scraper.py  scrape_items_only.py  smite_scraper_v2.py  test_crit_item.py  test_scraper.py  test_scraper_improvements.py  test_scraper_simple.py  test_scraper_structure.py  transform_data.py  unified_scraper.py  update_item_tags.py  verify_scraper_compatibility.py  wiki_scraper.py
src/: app.css  main.rs  utils.rs
(+65 files in other folders)
