[package]
name = "grappul"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["web", "router"] }
dioxus-web = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "console",
    "Storage",
    "HtmlElement",
    "DomTokenList",
    "MediaQueryList",
    "MediaQueryListEvent",
    "AddEventListenerOptions",
    "EventTarget",
    "EventListener"
] }
log = "0.4"
wasm-logger = "0.2"
once_cell = "1.19"
lazy_static = "1.4.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
